--- a/gallery.html
+++ b/gallery.html
@@ -9,13 +9,52 @@
     <link rel="icon" href="/img/icon.png" type="image/png">
 </head>
 
-<body>
+<header>
                 <ul>
                     <li>
-                        <a href="index.html">Sobre</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="project.html">Galeria</a>
+                        <a href="contact.html">CONTATO</a>
                     </li>
                  </ul>
+</header>
+
+<body>
+ <main>
+        <div = "img">
+          <div>
+           <img src="https://cdnb.artstation.com/p/assets/images/images/046/407/153/large/santoskt-img20211229-17210649-page-0001.jpg?1645038692">
+            <p id="P1">Ramsay MacDonald, Solomon Joseph Solomon, 1911</p>
+            <p id="P1">Lápis de cor sobre papel, 2021</p>
+           </div>
+          <div>
+           <img src="https://cdna.artstation.com/p/assets/images/images/046/407/570/large/snickpine-img20211229-17221126-page-0001.jpg?1645039332">
+            <p id="P1">Hans Holbein, por volta de 1526-1528</p>
+            <p id="P1">Lápis de cor sobre papel, 2021</p>
+          </div>
+          <div>
+           <img src="https://cdna.artstation.com/p/assets/images/images/046/407/778/large/snickpine-img20211229-17234610-page-0001.jpg?1645039637">
+            <p id="P1"> Retrato de Edith, a esposa do artista Joseph Rodefer DeCamp, 1895</p>
+            <p id="P1">Caneta azul sobre papel, 2021</p>
+          </div>
+          <div>
+          <img src="https://cdnb.artstation.com/p/assets/images/images/057/601/937/large/snickpine-iza-2.jpg?1672109693">
+            <p id="P1">Isabel e José Dias</p>
+            <p id="P1">Grafite sobre papel, 2020</p>
+         </div>
+         <div>
+           <img src="https://cdnb.artstation.com/p/assets/images/images/060/201/323/large/snickpine-20230305-135935-01-01.jpg?1678048677">
+            <p id="P1">Eliel Santos</p>
+            <p id="P1">Grafite sobre papel, 2020</p>
+         </div>    
+         <div>
+           <img src="https://cdna.artstation.com/p/assets/images/images/060/195/668/large/snickpine-20230305-142853-01.jpg?1678038708">
+            <p id="P1">Bufalo</p>
+            <p id="P1">Caneta preta sobre papel, 2020</p>
+         </div>   
+    </main>    
 </body>
+
+ 
+ 
