--- a/thanks.html
+++ b/thanks.html
@@ -14,13 +14,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html">Projetos</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="gallery.html">Galeria</a>
+                        <a href="gallery.html">GALERIA</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contato</a>
+                        <a href="contact.html">CONTATO</a>
                     </li>
                 </ul>
             </nav>
