--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
        
            <form class="contact-form" action="https://formsubmit.co/elielpilotof16@gmail.com" method="POST">
                 <div>
-                    <label for="nome">E-mail</label>         
+                    <label for="nome">Nome</label>         
                     <input id="A1" type="text" name="nome" required>
                 </div>
                 <div>
