--- a/gallery.html
+++ b/gallery.html
@@ -9,50 +9,60 @@
     <link rel="icon" href="/img/icon.png" type="image/png">
 </head>
 
-<header>
-                <ul>
+<header id="H2">
+                 <ul>
                     <li>
                         <a href="index.html">HOME</a>
                     </li>
                     <li>
                         <a href="contact.html">CONTATO</a>
                     </li>
-                 </ul>
+                 </ul>           
 </header>
 
 <body>
  <main>
         <div = "img">
-          <div>
-           <img src="https://cdnb.artstation.com/p/assets/images/images/046/407/153/large/santoskt-img20211229-17210649-page-0001.jpg?1645038692">
+           <div>
+            <img src="https://cdnb.artstation.com/p/assets/images/images/046/407/153/large/santoskt-img20211229-17210649-page-0001.jpg?1645038692">
             <p id="P1">Ramsay MacDonald, Solomon Joseph Solomon, 1911</p>
             <p id="P1">Lápis de cor sobre papel, 2021</p>
            </div>
-          <div>
-           <img src="https://cdna.artstation.com/p/assets/images/images/046/407/570/large/snickpine-img20211229-17221126-page-0001.jpg?1645039332">
+           <div>
+            <img src="https://cdna.artstation.com/p/assets/images/images/046/407/570/large/snickpine-img20211229-17221126-page-0001.jpg?1645039332">
             <p id="P1">Hans Holbein, por volta de 1526-1528</p>
             <p id="P1">Lápis de cor sobre papel, 2021</p>
-          </div>
-          <div>
-           <img src="https://cdna.artstation.com/p/assets/images/images/046/407/778/large/snickpine-img20211229-17234610-page-0001.jpg?1645039637">
+           </div>
+           <div>
+            <img src="https://cdna.artstation.com/p/assets/images/images/046/407/778/large/snickpine-img20211229-17234610-page-0001.jpg?1645039637">
             <p id="P1"> Retrato de Edith, a esposa do artista Joseph Rodefer DeCamp, 1895</p>
             <p id="P1">Caneta azul sobre papel, 2021</p>
-          </div>
-          <div>
-          <img src="https://cdnb.artstation.com/p/assets/images/images/057/601/937/large/snickpine-iza-2.jpg?1672109693">
+           </div>
+           <div>
+            <img src="https://cdnb.artstation.com/p/assets/images/images/057/601/937/large/snickpine-iza-2.jpg?1672109693">
             <p id="P1">Isabel e José Dias</p>
             <p id="P1">Grafite sobre papel, 2020</p>
-         </div>
-         <div>
-           <img src="https://cdnb.artstation.com/p/assets/images/images/060/201/323/large/snickpine-20230305-135935-01-01.jpg?1678048677">
+           </div>
+           <div>
+            <img src="https://cdnb.artstation.com/p/assets/images/images/060/201/323/large/snickpine-20230305-135935-01-01.jpg?1678048677">
             <p id="P1">Eliel Santos</p>
             <p id="P1">Grafite sobre papel, 2020</p>
-         </div>    
-         <div>
-           <img src="https://cdna.artstation.com/p/assets/images/images/060/195/668/large/snickpine-20230305-142853-01.jpg?1678038708">
+           </div>
+           <div>
+            <img src="https://cdnb.artstation.com/p/assets/images/images/063/362/331/large/snickpine-snapinsta-app-348457020-741825237727899-3825434426511943661-n-1080.jpg?1685372700">
+            <p id="P1">Stephen Bauman, 2022</p>
+            <p id="P1">Lápis de cor sobre papel, 2023</p>
+           </div>
+           <div>
+            <img src="https://cdna.artstation.com/p/assets/images/images/046/408/360/large/snickpine-img-20220208-194138-074.jpg?1645040590">
+            <p id="P1">Stephen Bauman, 2022</p>
+            <p id="P1">Lápis de cor sobre papel, 2022</p>
+           </div>    
+           <div>
+            <img src="https://cdna.artstation.com/p/assets/images/images/060/195/668/large/snickpine-20230305-142853-01.jpg?1678038708">
             <p id="P1">Bufalo</p>
             <p id="P1">Caneta preta sobre papel, 2020</p>
-         </div>   
+          </div>   
     </main>    
 </body>
 
