--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
           <body>
            <div class="center">
-             <img src="./img/icon.png"></img>
+             <img src="/img/icon.png"></img>
              <h1>ELIEL SANTOS</h1>
              <p>-----------------------------------------------------------------</p>
        
@@ -34,7 +34,7 @@
           <nav>
             <ul>
                 <li>
-                    <a href="index.html">SOBRE</a>
+                    <a href="pong.html">GAME</a>
                 </li>
                 <li>
                     <a href="gallery.html">GALERIA</a>
