--- a/gallery.html
+++ b/gallery.html
@@ -22,44 +22,44 @@
 
 <body>
  <main>
-        <div = "img">
+        <div>
            <div>
-            <img src="https://cdnb.artstation.com/p/assets/images/images/046/407/153/large/santoskt-img20211229-17210649-page-0001.jpg?1645038692">
+            <img src="/img/gallery/solomon.jpg">
             <p id="P1">Ramsay MacDonald, Solomon Joseph Solomon, 1911</p>
             <p id="P1">Lápis de cor sobre papel, 2021</p>
            </div>
            <div>
-            <img src="https://cdna.artstation.com/p/assets/images/images/046/407/570/large/snickpine-img20211229-17221126-page-0001.jpg?1645039332">
+            <img src="img/gallery/roxodraw.jpeg">
             <p id="P1">Hans Holbein, por volta de 1526-1528</p>
             <p id="P1">Lápis de cor sobre papel, 2021</p>
            </div>
            <div>
-            <img src="https://cdna.artstation.com/p/assets/images/images/046/407/778/large/snickpine-img20211229-17234610-page-0001.jpg?1645039637">
+            <img src="/img/gallery/pendraw.jpeg">
             <p id="P1"> Retrato de Edith, a esposa do artista Joseph Rodefer DeCamp, 1895</p>
             <p id="P1">Caneta azul sobre papel, 2021</p>
            </div>
            <div>
-            <img src="https://cdnb.artstation.com/p/assets/images/images/057/601/937/large/snickpine-iza-2.jpg?1672109693">
+            <img src="/img/gallery/isabel.jpg">
             <p id="P1">Isabel e José Dias</p>
             <p id="P1">Grafite sobre papel, 2020</p>
            </div>
            <div>
-            <img src="https://cdnb.artstation.com/p/assets/images/images/060/201/323/large/snickpine-20230305-135935-01-01.jpg?1678048677">
+            <img src="/img/gallery/Eliel.jpg">
             <p id="P1">Eliel Santos</p>
             <p id="P1">Grafite sobre papel, 2020</p>
            </div>
            <div>
-            <img src="https://cdnb.artstation.com/p/assets/images/images/063/362/331/large/snickpine-snapinsta-app-348457020-741825237727899-3825434426511943661-n-1080.jpg?1685372700">
+            <img src="/img/gallery/baumandraw.jpg">
             <p id="P1">Stephen Bauman, 2022</p>
             <p id="P1">Lápis de cor sobre papel, 2023</p>
            </div>
            <div>
-            <img src="https://cdna.artstation.com/p/assets/images/images/046/408/360/large/snickpine-img-20220208-194138-074.jpg?1645040590">
+            <img src="/img/gallery/baumandraw1.jpg">
             <p id="P1">Stephen Bauman, 2022</p>
             <p id="P1">Lápis de cor sobre papel, 2022</p>
            </div>    
            <div>
-            <img src="https://cdna.artstation.com/p/assets/images/images/060/195/668/large/snickpine-20230305-142853-01.jpg?1678038708">
+            <img src="/img/gallery/bufalo.jpg">
             <p id="P1">Bufalo</p>
             <p id="P1">Caneta preta sobre papel, 2020</p>
           </div>   
