--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <nav>
             <ul>
                 <li>
-                    <a href="pong.html">GAME</a>
+                    <a href="index.html">GAME</a>
                 </li>
                 <li>
                     <a href="gallery.html">GALERIA</a>
