--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,11 @@
 
 </header>
 
-
     <body>  
        <nav>
-           <header ="center">
+           <header>
                                   
                 <ul>
-                    <li>
-                        <a href="index.html">SOBRE</a>
-                    </li>
                     <li>
                         <a href="gallery.html">GALERIA</a>
                     </li>
@@ -35,7 +31,7 @@
                 </div>
                 <div>
                     <label for="email">E-mail</label>
-                    <input id"A2" type="email" name="email" required>
+                    <input id="A2" type="email" name="email" required>
                 </div>
                 <div>
                     <label for="message">Mensagem</label>
