--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/img/icon.png" type="image/png">
+     <link rel="icon" href="/img/icon.png" type="image/png">
 </head>
       <header>
              </header>
 
           <body>
            <div class="center">
+             </background-image:url(/img/modigliani2.jpg)>
              <img src="/img/icon.png"></img>
              <h1>ELIEL SANTOS</h1>
-             <p>-----------------------------------------------------------------</p>
+             <P>-----------------------------------------------------------------</p>
        
           <nav>
            <a href="contact.html"><button>MENSAGEM</button></a>                
@@ -33,9 +34,6 @@
           <div>
           <nav>
             <ul>
-                <li>
-                    <a href="index.html">GAME</a>
-                </li>
                 <li>
                     <a href="gallery.html">GALERIA</a>
                 </li>
